fix: width of the dialog no longer causes content to overflow the screen #46

--- a/src/style.scss
+++ b/src/style.scss
@@ -69,7 +69,7 @@ $auro-spacing-options: none;
   visibility: hidden;
   overflow: visible;
 
-  width: 100%;
+  width: calc(100% - var(--insetPaddingXl) - var(--insetPaddingXl));
   max-height: 90%;
   padding: var(--insetPaddingXl);
 
